--- a/src/main/webapp/WEB-INF/includes/footer.xhtml
+++ b/src/main/webapp/WEB-INF/includes/footer.xhtml
@@ -4,7 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <footer class="page-footer yellow darken-2">
+    <footer class="page-footer grey lighten-1">
         <div class="footer-copyright">
             <div class="container">
                 © 2020 Home Improvement
