--- a/src/main/webapp/WEB-INF/includes/navbar.xhtml
+++ b/src/main/webapp/WEB-INF/includes/navbar.xhtml
@@ -4,7 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <nav class="yellow">
+    <nav class="yellow lighten-3">
         <div class="nav-wrapper">
             <h:form id="navBar">
                 <a href="#" class="brand-logo">
@@ -15,28 +15,23 @@
                 <ul id="nav-standard" class="right hide-on-med-and-down">
                     <li><a href="http://materializecss.com/"></a></li>
                     <li>
-                        <h:commandLink rendered="#{loginBean.loggedIn}" action="#{loginBean.test()}" class="waves-effect waves-light btn blue-grey lighten-3">
-                            <i class="material-icons left">person</i><h:outputText value="#{loginBean.userName}"/>
-                        </h:commandLink>
-                    </li>
-                    <li>
-                        <h:commandLink id="loginLink" rendered="#{!loginBean.loggedIn}" action="login" class="waves-effect waves-light btn blue-grey lighten-3">
-                            <i class="material-icons left">person_outline</i><h:outputText value="#{MSG.LOGIN}"/>
-                        </h:commandLink>
+                        <a href="#" class="">
+                           <div class="row valign-wrapper">
+                                <div>
+                                    <img style="height: 55px;" class="circle responsive-img" src="https://www.nailseatowncouncil.gov.uk/wp-content/uploads/blank-profile-picture-973460_1280.jpg" />
+                                </div>
+                                <span class="grey-text darken-2 col">
+                                    <h:outputText value="#{loginBean.userName}"></h:outputText>
+                                </span>
+                            </div>
+                        </a>
                     </li>
                 </ul>
                 <!--Mobile navbar-->
                 <ul class="sidenav light-blue" id="nav-mobile">
                     <li><a href="http://materializecss.com/">Materialize CSS</a></li>
                     <li>
-                        <h:commandLink rendered="#{loginBean.loggedIn}" action="#{loginBean.logout()}" class="waves-effect waves-light btn blue-grey lighten-3">
-                            <i class="material-icons left">person</i><h:outputText value="#{loginBean.userName}"/>
-                        </h:commandLink>
-                    </li>
-                    <li>
-                        <h:commandLink rendered="#{!loginBean.loggedIn}" action="login" class="waves-effect waves-light btn blue-grey lighten-3">
-                            <i class="material-icons left">person_outline</i><h:outputText value="#{MSG.LOGIN}"/>
-                        </h:commandLink>
+                        <p:graphicImage value="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png" />
                     </li>
                 </ul>
             </h:form>
